fix slight position differenence on hover effect in .wrap-is-public

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -238,16 +238,16 @@ div.wrap-title-and-description:hover {
 }
 
 div.wrap-is-public {
-  padding: .6rem 2rem 1.5rem 2rem;
+  color: $oil;
   background-color: rgba(250,250,250,0.7);
-  font-size: 5rem;
-  margin-top: 0;
-  margin-bottom: 0;
+  font-size: 1rem;
+  padding: .6rem 2rem 1.5rem 2rem;
+  margin: 0;
 
   p.is-public-link {
-    margin-bottom: 0;
     padding-bottom: 0;
-    font-size: .9rem;
+    margin-bottom: 0;
+    font-size: 1rem;
     text-align: right;
   }
 }
@@ -256,11 +256,10 @@ div.wrap-is-public {
 div.wrap-is-public:hover a {
   display: inline-block;
   width: 100%;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: .6rem;
-  padding-bottom: .1rem;
+  font-size: 1rem;
   color: $third-color;
+  padding: 0;
+  margin: 0;
   height: 50px;
   transition: all .25 ease-in-out;
 }
@@ -268,11 +267,11 @@ div.wrap-is-public:hover a {
 div.wrap-is-public:hover {
   display: inline-block;
   width: 100%;
+  font-size: 1rem;
+  color: $third-color;
   background-color: rgba(20, 130, 133, 0.4);
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 0;
-  text-align: center;
+  padding: .6rem 2rem 1.5rem 2rem;
+  margin: 0;
   transition: all .25 ease-in-out;
 }
 
